--- a/app/code/Sooryen/Test/view/frontend/layout/test_index_index.xml
+++ b/app/code/Sooryen/Test/view/frontend/layout/test_index_index.xml
@@ -1,18 +1,18 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="../../../../../../../lib/internal/Magento/Framework/View/Layout/etc/page_configuration.xsd">
 
-	<head>
-        <title>Titlename</title>
-        <!-- 
-		demo
-		<css src="Sooryen_Test::css/css.css"/>
-		<script src="Sooryen_Test::js/js.js"/>
-		<css src="jquery/fileUploader/css/jquery.fileupload-ui.css"/>
-		<script src="path/file.js" defer="defer"/>
-		<link src="http://url.com" src_type="url"/>
-		<remove src="path/remove/file.css"/>
+    <head>
+        <title>Sooryen Test</title>
+        <!--
+        demo
+        <css src="Sooryen_Test::css/css.css"/>
+        <script src="Sooryen_Test::js/js.js"/>
+        <css src="jquery/fileUploader/css/jquery.fileupload-ui.css"/>
+        <script src="path/file.js" defer="defer"/>
+        <link src="http://url.com" src_type="url"/>
+        <remove src="path/remove/file.css"/>
 
-		-->
-    </head> 
+        -->
+    </head>
 
     <body>
 
